# user_expense_task

./: Dockerfile  README.md  db.env  default.env  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
project/accounts/: admin.py  filters.py  forms.py  models.py  serializers.py  views.py
project/accounts/management/commands/: createdefaultadmin.py
project/accounts/migrations/: 0001_initial.py
project/core/: asgi.py  urls.py  wsgi.py
project/core/settings/: base.py  local.py
scripts/: entrypoint.sh
